# rafka

./: Cargo.toml
codegen/: Cargo.toml
codegen/src/: lib.rs
src/: config.rs  lib.rs
src/client/: mod.rs
src/proto/: api_versions.rs  create_partitions.rs  describe_groups.rs  fetch.rs  find_coordinator.rs  format.rs  heartbeat.rs  join_group.rs  leader_isr.rs  leave_group.rs  list_groups.rs  list_offsets.rs  metadata.rs  mod.rs  offset_commit.rs  offset_delete.rs  offset_fetch.rs  produce.rs  sync_group.rs
src/transport/: mod.rs
